--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
       <artifactId>mssql-jdbc</artifactId>
       <version>9.4.1.jre16</version>
     </dependency>
+
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
     
     <!-- JSTL for JSP -->
     <dependency>
